test/functions/resolution/errors/printAdditionalErrors-2.compopts
--print-additional-errors --print-callstack-on-error
